# vesper

./: 00_INDEX.md  01_OVERVIEW.md  02_TECH_STACK.md  07_AI_PIPELINE.md  README.md  frb.yaml
.github/workflows/: android_release.yml  macos_release.yml  windows_release.yml
docs/: 03_FEATURES.md  04_DESIGN_SYSTEM.md  05_PHASES.md  06_DATA_MODELS.md
vesper_core/: Cargo.toml
vesper_core/src/: api.rs  frb_generated.rs
vesper_flutter/: README.md  pubspec.yaml
vesper_flutter/android/app/: build.gradle.kts
vesper_flutter/android/app/src/main/: AndroidManifest.xml
vesper_flutter/ios/Runner/: Info.plist
vesper_flutter/ios/Runner.xcodeproj/: project.pbxproj
vesper_flutter/lib/: main.dart
vesper_flutter/lib/core/: constants.dart
vesper_flutter/lib/features/recording/: recording_screen.dart
vesper_flutter/lib/features/recording/widgets/: recording_orb.dart
vesper_flutter/lib/features/settings/: settings_screen.dart
vesper_flutter/lib/features/vault/: vault_screen.dart
vesper_flutter/lib/features/vault/widgets/: note_card.dart
vesper_flutter/lib/shared/navigation/: app_router.dart  scaffold_with_navigation.dart
vesper_flutter/lib/shared/theme/: vesper_theme.dart
vesper_flutter/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
vesper_flutter/macos/Runner.xcodeproj/: project.pbxproj
vesper_flutter/macos/Runner/Configs/: AppInfo.xcconfig
vesper_flutter/test/: widget_test.dart
vesper_flutter/windows/: CMakeLists.txt
vesper_flutter/windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
