[package]
name = "vesper_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "2.0.0"

# Transcription
whisper-rs = "0.11.0"

# Audio I/O
cpal = "0.15.2"
hound = "3.5.1"

# Storage & Network
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Utils
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4"
